--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     
-    
+
 </body>
 <script src="Fach 1.js"></script>
-<script src="https://lernzettel-rechte.netlify.app/script.js"></script>
+<script src="script_zusammensetzen.js"></script>
 <script src="script.js"></script>
 </html>
