--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
 
 </body>
-<script src="Fach 1.js"></script>
+<script src="Fach_1.js"></script>
 <script src="script.js"></script>
 <script src="script_zusammensetzen.js"></script>
 </html>
