--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
 </body>
 <script src="Fach_1.js"></script>
 <script src="script.js"></script>
-<script src="script_zusammensetzen.js"></script>
+<script src="Fach_1_zu_PDF.js"></script>
 </html>
