--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     
 
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
+<script src="https://mrrio.github.io/jsPDF/dist/jspdf.debug.js"></script>
 <script src="Fach_1.js"></script>
 <script src="script.js"></script>
 <script src="Fach_1_zu_PDF.js"></script>
