--- a/index.html
+++ b/index.html
@@ -14,5 +14,5 @@
 <script src="https://mrrio.github.io/jsPDF/dist/jspdf.debug.js"></script>
 <script src="Fach_1.js"></script>
 <script src="script.js"></script>
-<script src="Fach_1_zu_PDF.js"></script>
+<script src="PDF_erstellen.js"></script>
 </html>
